--- a/main.css
+++ b/main.css
@@ -84,15 +84,16 @@ main {
 	width: 100%;
 }
 
-.price_item {
-	/* width: 250px; */
-	/* padding: 10px; */
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	border-bottom: 1px solid #A7A7A7;
+@media screen and (max-width: 1000px) {
+	.price_items {
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		grid-gap: 35px;
+		width: 100%;
+		/* width: 250px; */
+		/* padding: 10px; */
 
+	}
 }
 
 /* .description {} */
