--- a/main.css
+++ b/main.css
@@ -119,7 +119,7 @@ footer {
 	background-color: black;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
-	padding: 10px 20px;
+	padding: 0.5em 1.5em;
 	color: white;
 	font-size: 0.8em;
 
