--- a/main.css
+++ b/main.css
@@ -17,9 +17,24 @@ header {
 	/*padding: 5px;*/
 }
 
-.main__header {
+.main_header {
 	text-align: center;
 	border-bottom: 1px solid #A7A7A7;
+}
+
+.flex_header {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.a-black {
+	color: black;
+	/* float: left; */
+	position: absolute;
+	right: 15px;
+	top: 1.4em;
+	/* display: inline-flex; */
 }
 
 .logo>h2 {
@@ -34,27 +49,10 @@ main {
 	/*height: 5000px;*/
 }
 
-
-.main__image {
-	background-image: url(img/kofe-s-koritsey.jpg);
-	/* filter: blur(2px); */
-	width: 100%;
-	height: 50vh;
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-
-}
-
-.SayHi {
-	padding-top: 15px;
-}
-
-.white {
+/* .white {
 	color: white;
 	filter: blur(0);
-}
+} */
 
 .head__center {
 	text-align: center;
@@ -63,55 +61,17 @@ main {
 }
 
 .container {
-	/*width: 100%;*/
+	max-width: 800px;
 	margin: 0 auto;
 	padding-top: 10px;
 }
 
+/* .container>a {
+	color: black;
+} */
+
 .logo {
 	font-family: 'Bad Script', cursive;
-}
-
-.price_list {
-	width: 90%;
-	margin: 10px auto;
-}
-
-.price_items {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 35px;
-	width: 100%;
-}
-
-@media screen and (max-width: 1000px) {
-	.price_items {
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-gap: 15px;
-		width: 100%;
-	}
-}
-
-.price_item {
-	/* width: 250px; */
-	/* padding: 10px; */
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	border-bottom: 1px solid #A7A7A7;
-}
-
-/* .description {} */
-
-.poster {
-	width: 100%;
-	border-radius: 5px;
-}
-
-.price {
-	text-decoration: underline;
 }
 
 
