--- a/main.css
+++ b/main.css
@@ -37,6 +37,11 @@ header {
 	/* display: inline-flex; */
 }
 
+h2>a {
+	color: black;
+	text-decoration: none;
+}
+
 .logo>h2 {
 	margin: 0;
 	padding: 5px
