--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     /* filter: blur(2px); */
     width: 100%;
     height: 50vh;
+    max-height: 200px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
